--- a/case/index.html
+++ b/case/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Case - AI OP-專業的運維服務</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel="icon" href="/favicon.png">
+  <link rel="icon" href="//localhost:1313/favicon.png">
 
   
   
-  <link rel="stylesheet" href="/css/style.min.a18617607f85b13a691d5cd5f754692b45295e8ddec1dc76728ec550190cf6da.css">
+  <link rel="stylesheet" href="/css/style.css">
   
 
   
@@ -64,10 +64,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="/"><img height=29px width=217px alt="AI運維服務 穩如老狗" src="/images/logo_ai-op.png" /></a>
+      <a href="//localhost:1313/"><img height=29px width=217px alt="AI運維服務 穩如老狗" src="/images/logo_ai-op.png" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="/"><img height=36px width=36px alt="AI運維服務 穩如老狗" src="/images/logo_ai-op-s.png" /></a>
+      <a href="//localhost:1313/"><img height=36px width=36px alt="AI運維服務 穩如老狗" src="/images/logo_ai-op-s.png" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -203,8 +203,8 @@
           </ul>
           
           <ul class="footer-menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="//localhost:1313/">Home</a></li>
+            <li><a href="//localhost:1313/contact">Contact</a></li>
             <li class="copyright">© 2024 AI OP-專業的運維服務</li>
           </ul>
         </div>
@@ -239,13 +239,9 @@
   
 
   
-  <script type="text/javascript" src="/js/scripts.min.8504133605a277da18f0d58cfd2e90d154962f4a961543a6e2f0a459a2d05462.js"></script>
+  <script type="text/javascript" src="/js/scripts.js"></script>
   
 
-  
-  
-  
-    
   
 
 
