--- a/contact/index.html
+++ b/contact/index.html
@@ -255,7 +255,7 @@ City, State 12345
               
           </ul>
           <ul>
-            <li class="zerostatic"><a href="https://aiop.one">AI OP-專業的運維服務</a></li>
+            <li class="zerostatic"><a href="https://aiop.one">https://aiop.one</a></li>
           </ul>
         </div>
       </div>
