--- a/services/continious-optimization/index.html
+++ b/services/continious-optimization/index.html
@@ -132,11 +132,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Cyanee nec pedicis positi. Esse et diem forte quoque et ieiunia
-vixque dixit negari <em>ullis stamina</em>: trahit. Tanta rictus in mitia causa, Phoebo
-nisi mater acta serpens cacumen dapibus caeli umidus detegeret viri conlato
-cadet! <a href="#natisque-tot-traiecta">Ego</a> vitis imagine stagna insidias redigentur
-petunt dempserat dixisse, pro raptae aut male?</p>
+        <div class="content"><p>在科技瞬息萬變的時代，我們致力於持續優化各種業務流程，運用最先進的技術提升效率，確保產品與服務的卓越品質。我們不斷創新，以靈活應變的能力，幫助企業在競爭中脫穎而出，迎接未來的挑戰。</p>
 <ul>
 <li>Dente reponere dixere referre excessitque seque</li>
 <li>Tacui si cui inde haec ubi trepidas</li>
@@ -216,7 +212,7 @@ motibus; opem baculum.</p>
               
           </ul>
           <ul>
-            <li class="zerostatic"><a href="https://aiop.one">AI OP-專業的運維服務</a></li>
+            <li class="zerostatic"><a href="https://aiop.one">https://aiop.one</a></li>
           </ul>
         </div>
       </div>
