--- a/services/continious-update/index.html
+++ b/services/continious-update/index.html
@@ -132,10 +132,8 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Lorem markdownum <strong>Achaica revolutaque amore</strong>, penitus puppes nec furit,
-clipeus fatetur, mira inter accedere. Dedit dum raptoresque Oete dolorem
-Cretaeas enim <a href="#in-poscat">ipse pectora excusat</a> candentibus fertur? Furtiva
-Orontes Erysicthona dona, est per Achille viridi draconis cultis mota milia.</p>
+        <div class="content"><p>提供迅速且穩定的更新迭代方案，確保您的系統始終處於最佳狀態。我們的專業團隊運用最新技術，持續優化和升級，解決潛在問題，提升系統性能。
+讓您的企業在不斷變化的市場中保持競爭力，快速適應未來的挑戰。</p>
 <ul>
 <li>Nata perque</li>
 <li>Et ferrugine laedam</li>
@@ -211,7 +209,7 @@ semper</em>?</p>
               
           </ul>
           <ul>
-            <li class="zerostatic"><a href="https://aiop.one">AI OP-專業的運維服務</a></li>
+            <li class="zerostatic"><a href="https://aiop.one">https://aiop.one</a></li>
           </ul>
         </div>
       </div>
