--- a/services/cost-savings/index.html
+++ b/services/cost-savings/index.html
@@ -132,9 +132,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Lorem markdownum aequalis strigis. Saetigeri iubeas, vultu huic alvum nondum
-de obside ut laniavit arbor palmis, cum quin. Rupes vetat videndo, armigerae
-crimen habet Priamum nec.</p>
+        <div class="content"><p>專注於通過創新技術和精細管理，幫助企業有效節省運營成本。我們提供定制化解決方案，優化資源配置，提升效率，減少浪費。在確保高品質服務的同時，最大限度地降低支出，讓您的企業在競爭激烈的市場中保持優勢。</p>
 <h2 id="ne-verba-patulosque-numen-vix-libet">Ne verba patulosque numen vix libet</h2>
 <p>Agitabitur signa lympha; non lacunae, mox cum tumulis quoque triste dictis.
 Ignibus inpatiens explorat, te tegens <em>ferro nocere haud</em>, et Dulichium tui
@@ -217,7 +215,7 @@ tamen lentis spectat, Titania est animo.</p>
               
           </ul>
           <ul>
-            <li class="zerostatic"><a href="https://aiop.one">AI OP-專業的運維服務</a></li>
+            <li class="zerostatic"><a href="https://aiop.one">https://aiop.one</a></li>
           </ul>
         </div>
       </div>
