--- a/services/information-security/index.html
+++ b/services/information-security/index.html
@@ -132,14 +132,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Lorem markdownum, dictis umbrosum dextrum, Lelegeia quamquam distantes pares
-ignisque quaerit dederat gemino Aethiopesque <a href="#inque-ne-collocat">caelo</a>
-ulciscitur est. Morte <a href="#esse-ferro-nisi">lugebere</a> conatur <a href="#pia-non">Pallada
-quaerentes</a> tulit, <strong>ignis vagatur undis</strong>, latitantem ignemque non
-laevo. Terras seu favoni tectas movit hunc motuque damno tutoque quattuor. Leto
-duo arbore, tua paelice regnis scopulis ut Lachne Menoetae nigra repugnat
-Coroneus est qui viscere barbariam <strong>seris</strong>. Vim in quamquam colla ventura
-remos, Procne mane atque sic solent <a href="#iuvabat-limumque">non caelestibus</a>.</p>
+        <div class="content"><p>在數位時代，資訊安全至關重要。我們提供領先的資訊安全解決方案，保護您的數據免受威脅。我們專業的團隊採用最新的技術，確保資料的完整性和機密性，讓您的企業能夠在安全的環境中運行，專注於業務的發展與創新。</p>
 <h2 id="inter-pectore-totidem">Inter pectore totidem</h2>
 <p>Presserat <a href="#diversa-iam-inter">transitque inde</a>. Vel montes tum cohors Tityos
 lassavit nihil oracula exiguo ligatis.</p>
@@ -221,7 +214,7 @@ isset; nec non ille vero abstulit, ite est. Digitoque ora ego aethera, comas?</p
               
           </ul>
           <ul>
-            <li class="zerostatic"><a href="https://aiop.one">AI OP-專業的運維服務</a></li>
+            <li class="zerostatic"><a href="https://aiop.one">https://aiop.one</a></li>
           </ul>
         </div>
       </div>
