--- a/about/index.html
+++ b/about/index.html
@@ -218,7 +218,7 @@
               
           </ul>
           <ul>
-            <li class="zerostatic"><a href="https://aiop.one">AI OP-專業的運維服務</a></li>
+            <li class="zerostatic"><a href="https://aiop.one">https://aiop.one</a></li>
           </ul>
         </div>
       </div>
