--- a/services/system-architecture/index.html
+++ b/services/system-architecture/index.html
@@ -132,9 +132,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>Lorem markdownum aequalis strigis. Saetigeri iubeas, vultu huic alvum nondum
-de obside ut laniavit arbor palmis, cum quin. Rupes vetat videndo, armigerae
-crimen habet Priamum nec.</p>
+        <div class="content"><p>專注於構建穩定高效的系統架構，運用先進的技術方案，確保企業運營的穩定性和安全性。我們的專業團隊為您提供量身訂製的解決方案，提升業務靈活性和可擴展性，助力企業在數位化時代持續成長，保持競爭優勢。</p>
 <h2 id="ne-verba-patulosque-numen-vix-libet">Ne verba patulosque numen vix libet</h2>
 <p>Agitabitur signa lympha; non lacunae, mox cum tumulis quoque triste dictis.
 Ignibus inpatiens explorat, te tegens <em>ferro nocere haud</em>, et Dulichium tui
@@ -217,7 +215,7 @@ tamen lentis spectat, Titania est animo.</p>
               
           </ul>
           <ul>
-            <li class="zerostatic"><a href="https://aiop.one">AI OP-專業的運維服務</a></li>
+            <li class="zerostatic"><a href="https://aiop.one">https://aiop.one</a></li>
           </ul>
         </div>
       </div>
