--- a/services/continious-optimization/index.html
+++ b/services/continious-optimization/index.html
@@ -122,7 +122,7 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
-      <h1>Continuous Optimization</h1>
+      <h1>持續優化</h1>
       <p>更新迭代是系統穩健的基石</p>
     </div>
   </div>
@@ -132,41 +132,26 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>在科技瞬息萬變的時代，我們致力於持續優化各種業務流程，運用最先進的技術提升效率，確保產品與服務的卓越品質。我們不斷創新，以靈活應變的能力，幫助企業在競爭中脫穎而出，迎接未來的挑戰。</p>
-<ul>
-<li>Dente reponere dixere referre excessitque seque</li>
-<li>Tacui si cui inde haec ubi trepidas</li>
-<li>Coniunx nulla aut</li>
-</ul>
-<h2 id="geniti-facinus-praeruptam-atris-ab-manus-in">Geniti facinus praeruptam atris ab manus in</h2>
-<p>Properas iubar, mercurio regalis caelo Cerberon tetigisset et pervia, maduere
-non <em>tangere</em> tendens corpore sed. Sine genae ominibus cereris, pectebant tum
-<a href="#mutavit-lacertos">crudelia</a>, oscula. Veneris <em>rumpe tibi</em> aliquis paenituisse;
-cum tanti pressus erat <em>ira magnumque videntem</em>; fit est misit nec. Est ea
-vacuum Eumelique futurae stringebat facti indicat Hesioneque candore parsque
-patiensque, Perrhaebum <strong>illa</strong>: querenti.</p>
-<ol>
-<li>Deum sibi poma lacuque fateor</li>
-<li>Nisi vultibus adspicio totosque gladios a novatrix</li>
-<li>Regna ducebat</li>
-</ol>
-<p><em>Fuit</em> eurus promissaque. Faciemque tibi pectore reditum disiecit iam sede
-<strong>foret petebatur</strong> atro, tibi fugienti deus abluit illa, <strong>non</strong>.</p>
-<h2 id="vidit-si-probetne-vertitur">Vidit si probetne vertitur</h2>
-<p>In violenta et tamen praeterea populos meorum. Nos carissime Fortuna tellus aevo
-vestigia summae? Ad laedere portentificisque in olentes conbibit animi ad
-iuvenum <strong>inamabile</strong> perosae, <strong>hostis foedantem Rutulos</strong>.</p>
-<ol>
-<li>Augusta exstinctus dempto repperit ut quati enim</li>
-<li>Quae illo sine fatorum</li>
-<li>Sub ut Hyadasque specus terraeque coniunx vix</li>
-<li>Voce addita est haec</li>
-<li>Stagnum pavido sanguine Priamo custodia sed</li>
-</ol>
-<p>Iste gente Orpheus sua nec studiosior <em>et urit certe</em> relevare comites vestibus?
-Digredimur <em>conbibitur citius induruit</em> manes pressique Nyctimenen ille comas
-ductae in. Terret solebat misit; gestu erit ora Iunonis sine manus tacuit, carpe
-motibus; opem baculum.</p>
+        <div class="content"><p>在科技瞬息萬變的時代，我們致力於持續優化各種業務流程，運用最先進的技術提升效率，確保產品與服務的卓越品質。
+我們不斷創新，以靈活應變的能力，幫助企業在競爭中脫穎而出，迎接未來的挑戰。</p>
+<h3 id="持續優化永不止步的卓越追求">持續優化：永不止步的卓越追求</h3>
+<p>在瞬息萬變的時代，企業必須不斷優化自身，才能保持競爭力。持續優化是一種戰略性方法，
+旨在持續改進業務流程、產品和服務，以實現卓越的績效。</p>
+<p>我們的持續優化服務可幫助您：</p>
+<p>識別改進機會： 我們會幫助您識別業務流程、產品和服務中的瓶頸和改進機會。
+制定優化策略： 我們會與您合作制定切實可行的優化策略，以實現您的業務目標。
+實施優化措施： 我們會協助您實施優化措施，並監控其效果。
+持續改進： 我們會幫助您建立一個持續改進的文化，以確保您不斷取得進步。
+我們的持續優化服務可幫助您：</p>
+<p>提高效率： 減少浪費和提高效率，以降低成本和提高利潤。
+提升質量： 提高產品和服務質量，以增加客戶滿意度和忠誠度。
+增強競爭力： 在市場中保持領先優勢。
+如果您正在尋找可靠的持續優化合作夥伴，請立即聯繫我們。我們將幫助您建立一個卓越的運營模式，從而推動您的業務發展。</p>
+<p>以下是一些持續優化的具體案例：</p>
+<p>一家製造公司通過實施精益製造，將其生產成本降低了 20%。
+一家零售商通過採用數據分析，將其客戶轉化率提高了 15%。
+一家醫院通過改善流程，將其患者等待時間縮短了 30%。
+持續優化是一種持續不斷的旅程，但它可以為您的企業帶來巨大的回報。如果您致力於實現卓越，請讓我們幫助您開始您的持續優化之旅。</p>
 </div>
       </div>
     </div>
