--- a/services/continious-update/index.html
+++ b/services/continious-update/index.html
@@ -122,7 +122,7 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
-      <h1>Continious Update </h1>
+      <h1>更新迭代 </h1>
       <p>Preparing and filing your tax return</p>
     </div>
   </div>
@@ -134,36 +134,17 @@
       <div class="service service-single">
         <div class="content"><p>提供迅速且穩定的更新迭代方案，確保您的系統始終處於最佳狀態。我們的專業團隊運用最新技術，持續優化和升級，解決潛在問題，提升系統性能。
 讓您的企業在不斷變化的市場中保持競爭力，快速適應未來的挑戰。</p>
-<ul>
-<li>Nata perque</li>
-<li>Et ferrugine laedam</li>
-<li>Cedere tandem Atlante maiestas Italicis ut forma</li>
-</ul>
-<p>Levat austroque ilia castos, postquam petit confessis ad caput, ille rerum
-precor facitote nubemque. Potuit Celadon Martem?</p>
-<ol>
-<li>Imagine Assaracus victori petet femina mea haustos</li>
-<li>Sicaniam quibus agro magni</li>
-<li>In utque Troica pedum caelestia hunc tempto</li>
-<li>Gregibus certare tamen turbatque qui</li>
-</ol>
-<h2 id="patulis-veneris-est-expulit-adversaque-magnum-mediaque">Patulis Veneris est expulit adversaque magnum mediaque</h2>
-<p>Omnis est signa cum nec inplevit vivit et insania Orpheu, an abit. Nimbi
-subversaque et micant suumque, tibi ipse; sed. <strong>Deus quoque corpus</strong>; Icarus,
-<strong>mitescere</strong>, ferro queat, porrigitur exiguas viridique mille quis latus
-quodque. Non una genuisse ullis efficiet ad corpore nunc mentesque praestant?</p>
-<p><em>Diduxit manibus</em> anguis contraxit, suas et lacus nec soceri fores alis nec,
-nec! Data pater Perseu minanti animam operitur illa dolorem.</p>
-<p>Cursus suis <em>amplectitur inbutum retractat</em> te tempora <a href="#miles-deceat-adunca">deducere
-mille</a> cessastis alatur primoque. Tridentigero super, hoc
-parsque; et equos quaeque, forte nostro ceciderat, ubi faciat traherent
-tetigere: induitur. Nectare quae saepe <strong>equos cognoscere curvata</strong> aptius; odit
-inde aurea caecus. Nova et arbor <a href="#nondum-illuc">postquam uncis sumptumque</a>
-inquit ingeniosus quodam <strong>Phasidos</strong>, continui sensisse nemoris ante calcitrat
-siccatque frondes.</p>
-<p>Fugiunt madentes postis, tangit colorem raptores munera, ferox tueri postquam
-formosus servat potui. Luce ebur, pulcherrimus plus tradere! <em>Quam perque
-semper</em>?</p>
+<p>更新迭代：敏捷創新，永不停歇
+在當今瞬息萬變的市場中，企業必須快速適應新趨勢和客戶需求才能保持競爭力。更新迭代是一種敏捷的開發方法，旨在通過不斷地發布新版本來改進產品或服務。</p>
+<p>我們的更新迭代服務可幫助您：</p>
+<p>縮短上市時間： 我們會幫助您更快地將新功能和產品推向市場。
+提高客戶滿意度： 我們會根據客戶反饋不斷改進您的產品或服務。
+降低風險： 我們會通過小而頻繁的更新來降低風險。
+保持創新： 我們會幫助您保持創新，並在競爭中脫穎而出。
+我們的更新迭代服務可幫助您：</p>
+<p>提高市場份額： 通過更快地將新功能推向市場來贏得更多客戶。
+增強客戶忠誠度： 通過不斷改進您的產品或服務來提高客戶滿意度。
+降低成本： 通過小而頻繁的更新來降低開發和維護成本。</p>
 </div>
       </div>
     </div>
