--- a/services/cost-savings/index.html
+++ b/services/cost-savings/index.html
@@ -123,7 +123,7 @@
     <div class="hero-text">
       <span class="hero-section">services</span>
       <h1>Cost Savings</h1>
-      <p>Saving for retirement requires careful planning.</p>
+      <p>節省成本並非一蹴而就，但它能為您的企業帶來巨大的回報</p>
     </div>
   </div>
 </div>
@@ -133,43 +133,23 @@
     <div class="col-12 col-md-8">
       <div class="service service-single">
         <div class="content"><p>專注於通過創新技術和精細管理，幫助企業有效節省運營成本。我們提供定制化解決方案，優化資源配置，提升效率，減少浪費。在確保高品質服務的同時，最大限度地降低支出，讓您的企業在競爭激烈的市場中保持優勢。</p>
-<h2 id="ne-verba-patulosque-numen-vix-libet">Ne verba patulosque numen vix libet</h2>
-<p>Agitabitur signa lympha; non lacunae, mox cum tumulis quoque triste dictis.
-Ignibus inpatiens explorat, te tegens <em>ferro nocere haud</em>, et Dulichium tui
-male! Quo sed <a href="#vexant-achivi">fuit flexit et</a> hic die solido, gloria?</p>
-<ol>
-<li>Cum det dixit Parcarum qui spemque est</li>
-<li>Exit ex huic</li>
-<li>Quod consiste agitataque claustraque vicina videt lacertis</li>
-<li>Loquor videt</li>
-<li>Ardua non igne caelesti coniugis cognovi diversorum</li>
-<li>Per nunc pariterque saeva vindicet</li>
-</ol>
-<p>Locus evicit loquuntur Tyrrhena omnes, obstipui pugnabant temptavit Phoco <em>vati</em>
-dabant deus. Memorata haberet sepulcrales gentisque dum sic, in flumina templa!
-Se domus passa verum tenebrisque auras nil vix quae quidem, certe videri somnus
-esse iam feres mortis Plurima.</p>
-<h2 id="postquam-tamen">Postquam tamen</h2>
-<p>Et nec ingentem est minus faciunt praecipue posse auctoremque sedes transmittere
-et pedes miratur erat animaeque. Tellus admonuit humanam funes, sagittis et
-licet! Inserui quamvis Clymeni.</p>
-<ul>
-<li>Parens est studiisque interea</li>
-<li>Pro istis mediis carnes iste nec imperat</li>
-<li>Te vocas orat nisi quantumque castra</li>
-<li>Gestumque crepuscula esse videntur coegit</li>
-<li>Ambo videtque gerat aquae ferens vagina</li>
-<li>Adde leviter faciam tetigisse regunt concava in</li>
-</ul>
-<p>Superi monilia omnes Cyprio Scylla cibos punica quae succincta pallent de
-incubat hostes montibus, de moderato efficiet vulnere. Letum Atalanta Pallas,
-vis, saxo recepta <a href="#fati">membra contractosque</a> remigis <a href="#dissipat">vulnere vetus
-parte</a> indignata supera.</p>
-<p>Quantum auxilium datus; sed pineta et, iuvenes redito; credas mensae, meum. Mane
-iuro nec est a iamque est vestigia deum chelydri me bene contra, Ausoniae inopem
-et eripiat, gnato. Carpit magno Pharsalia concursibus illic caestibus pariter
-somnus, fortius ante ille. Superasse induit <em>celare</em> cadunt, ut Armeniae per
-tamen lentis spectat, Titania est animo.</p>
+<h4 id="節省成本智慧策略效益倍增">節省成本：智慧策略，效益倍增</h4>
+<p>在當今充滿挑戰的經濟環境中，企業必須精打細算，才能保持盈利能力和競爭力。節省成本是一種戰略性方法，旨在通過降低成本來提高利潤。</p>
+<p>我們的節省成本服務可幫助您：</p>
+<p>識別節省機會： 我們會幫助您識別業務運營中潛在的節省機會。
+制定節省策略： 我們會與您合作制定切實可行的節省策略，以實現您的財務目標。
+實施節省措施： 我們會協助您實施節省措施，並監控其效果。
+持續改進： 我們會幫助您建立一個節省成本的文化，以確保您不斷取得進步。
+我們的節省成本服務可幫助您：</p>
+<p>提高利潤： 降低成本，從而提高利潤率。
+增強競爭力： 在市場中保持更具競爭力。
+釋放資金： 將節省下來的資金用於投資和增長。
+如果您正在尋找可靠的節省成本合作夥伴，請立即聯繫我們。我們將幫助您建立一個高效的運營模式，從而推動您的業務發展。</p>
+<p>以下是一些節省成本的具體案例：</p>
+<p>一家製造公司通過採用精益製造，將其生產成本降低了 15%。
+一家零售商通過重新談判供應商合同，將其採購成本降低了 10%。
+一家醫院通過實施能源效率措施，將其公用事業費用降低了 20%。</p>
+<p>。如果您致力於提高效率和盈利能力，請讓我們幫助您開始您的節省成本之旅。</p>
 </div>
       </div>
     </div>
