--- a/services/multi-intergration/index.html
+++ b/services/multi-intergration/index.html
@@ -122,8 +122,8 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
-      <h1>Multi Integration </h1>
-      <p>We offer general accouting on hourly rate or fixed fee</p>
+      <h1>多方整合 </h1>
+      <p>分析應用系統所需的資源 達成用戶最佳體驗</p>
     </div>
   </div>
 </div>
@@ -132,44 +132,25 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>分析應用系統所需的資源，由架構師進行規劃後，協同開發人員在每次交付成果時進行壓測，更要能核實資訊安全，達到用戶最佳體驗。</p>
-<h2 id="ne-verba-patulosque-numen-vix-libet">Ne verba patulosque numen vix libet</h2>
-<p>Agitabitur signa lympha; non lacunae, mox cum tumulis quoque triste dictis.
-Ignibus inpatiens explorat, te tegens <em>ferro nocere haud</em>, et Dulichium tui
-male! Quo sed <a href="#vexant-achivi">fuit flexit et</a> hic die solido, gloria?</p>
-<ol>
-<li>Cum det dixit Parcarum qui spemque est</li>
-<li>Exit ex huic</li>
-<li>Quod consiste agitataque claustraque vicina videt lacertis</li>
-<li>Loquor videt</li>
-<li>Ardua non igne caelesti coniugis cognovi diversorum</li>
-<li>Per nunc pariterque saeva vindicet</li>
-</ol>
-<p>Locus evicit loquuntur Tyrrhena omnes, obstipui pugnabant temptavit Phoco <em>vati</em>
-dabant deus. Memorata haberet sepulcrales gentisque dum sic, in flumina templa!
-Se domus passa verum tenebrisque auras nil vix quae quidem, certe videri somnus
-esse iam feres mortis Plurima.</p>
-<h2 id="postquam-tamen">Postquam tamen</h2>
-<p>Et nec ingentem est minus faciunt praecipue posse auctoremque sedes transmittere
-et pedes miratur erat animaeque. Tellus admonuit humanam funes, sagittis et
-licet! Inserui quamvis Clymeni.</p>
+        <div class="content"><h3 id="多方整合打破資訊孤島實現高效協作">多方整合：打破資訊孤島，實現高效協作</h3>
+<p>在當今充滿競爭的市場中，企業需要整合來自不同應用程序和系統的數據，以獲得全面的業務洞察力並做出明智的決策。
+然而，多方整合往往是一項複雜且具有挑戰性的任務，需要專業的知識和技能。</p>
+<p>多方整合服務可幫助您克服這些挑戰，實現高效的數據共享和應用程序交互。我們擁有經驗豐富的團隊，可提供以下服務：</p>
 <ul>
-<li>Parens est studiisque interea</li>
-<li>Pro istis mediis carnes iste nec imperat</li>
-<li>Te vocas orat nisi quantumque castra</li>
-<li>Gestumque crepuscula esse videntur coegit</li>
-<li>Ambo videtque gerat aquae ferens vagina</li>
-<li>Adde leviter faciam tetigisse regunt concava in</li>
+<li>需求分析： 我們會仔細分析您的業務需求，並確定所需的整合方案。</li>
+<li>架構設計： 我們會設計一個安全、可靠且可擴展的整合架構，以滿足您的業務需求。</li>
+<li>應用程序開發： 我們會開發定制的整合應用程序，以連接您的應用程序和系統。</li>
+<li>數據遷移： 我們會安全地將您的數據遷移到新的整合平台。</li>
+<li>測試和驗證： 我們會全面測試您的整合解決方案，以確保其正常運行。</li>
 </ul>
-<p>Superi monilia omnes Cyprio Scylla cibos punica quae succincta pallent de
-incubat hostes montibus, de moderato efficiet vulnere. Letum Atalanta Pallas,
-vis, saxo recepta <a href="#fati">membra contractosque</a> remigis <a href="#dissipat">vulnere vetus
-parte</a> indignata supera.</p>
-<p>Quantum auxilium datus; sed pineta et, iuvenes redito; credas mensae, meum. Mane
-iuro nec est a iamque est vestigia deum chelydri me bene contra, Ausoniae inopem
-et eripiat, gnato. Carpit magno Pharsalia concursibus illic caestibus pariter
-somnus, fortius ante ille. Superasse induit <em>celare</em> cadunt, ut Armeniae per
-tamen lentis spectat, Titania est animo.</p>
+<h3 id="我們的多方整合服務可幫助您">我們的多方整合服務可幫助您：</h3>
+<ul>
+<li>消除數據孤島： 將數據從不同的應用程序和系統中整合在一起，以獲得全面的業務洞察力。</li>
+<li>提高業務效率： 自動化數據交換和應用程序交互，以提高工作效率。</li>
+<li>降低成本： 減少對手動數據處理和整合的依賴，以降低成本。</li>
+<li>增強競爭力： 通過更快、更明智的決策來獲得競爭優勢。</li>
+</ul>
+<p>如果您正在尋找可靠的多方整合合作夥伴，請立即聯繫我們。我們將幫助您實現高效的數據共享和應用程序交互，從而推動您的業務發展。</p>
 </div>
       </div>
     </div>
