--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.614b821e28f2775bb7c4f52758ebf66f031469051537d8362362bfb66445bcec.css">
+  <link rel="stylesheet" href="/css/style.min.f1538715b80c0cb1453f4a2099a0f71df44809309976cafc9aa36560a163cd3a.css">
   
 
   
@@ -133,7 +133,7 @@
 
 
 
-<div class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('/about/engineer-4941162_1280.jpg');">
+<div class="strip bg-cover bg-position-top bg-overlay pconly-bg" style="background-image: url('/about/engineer-4941162_1280.jpg');">
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
@@ -149,7 +149,7 @@
   </div>
 </div>
 
-<div class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('/about/jason-goodman-Oalh2MojUuk-unsplash.jpg');">
+<div class="strip bg-cover bg-position-top bg-overlay pconly-bg" style="background-image: url('/about/jason-goodman-Oalh2MojUuk-unsplash.jpg');">
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 ">
@@ -163,7 +163,7 @@
   </div>
 </div>
 
-<div class="strip bg-cover bg-position-top bg-overlay" style="background-image: url('/');">
+<div class="strip bg-cover bg-position-top bg-overlay pconly-bg" style="background-image: url('/');">
   <div class="container pt-17 pb-17">
     <div class="row">
       <div class="col-12 col-md-6 offset-md-6">
