--- a/services/2.information-security/index.html
+++ b/services/2.information-security/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>多方整合 - AI OP-專業的運維服務</title>
+  <title>資訊安全 - AI OP-專業的運維服務</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon.png">
@@ -104,12 +104,12 @@
   </div>
 </div>
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/services/service1.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/services/service2.jpg')">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
-      <h1>多方整合 </h1>
-      <p>分析應用系統所需的資源 達成用戶最佳體驗</p>
+      <h1>資訊安全</h1>
+      <p>當今數字時代，資訊安全至關重要</p>
     </div>
   </div>
 </div>
@@ -118,25 +118,24 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>在當今充滿競爭的市場中，企業需要整合來自不同應用程序和系統的數據，以獲得全面的業務洞察力並做出明智的決策。
-然而，多方整合往往是一項複雜且具有挑戰性的任務，需要專業的知識和技能。</p>
-<h4 id="多方整合打破資訊孤島實現高效協作">多方整合：打破資訊孤島，實現高效協作</h4>
-<p>多方整合服務可幫助您克服這些挑戰，實現高效的數據共享和應用程序交互。我們擁有經驗豐富的團隊，可提供以下服務：</p>
-<ul>
-<li>需求分析： 我們會仔細分析您的業務需求，並確定所需的整合方案。</li>
-<li>架構設計： 我們會設計一個安全、可靠且可擴展的整合架構，以滿足您的業務需求。</li>
-<li>應用程序開發： 我們會開發定制的整合應用程序，以連接您的應用程序和系統。</li>
-<li>數據遷移： 我們會安全地將您的數據遷移到新的整合平台。</li>
-<li>測試和驗證： 我們會全面測試您的整合解決方案，以確保其正常運行。</li>
-</ul>
-<h4 id="我們的多方整合服務可幫助您">我們的多方整合服務可幫助您：</h4>
+        <div class="content"><p>在數位時代，資訊安全至關重要。我們提供領先的資訊安全解決方案，保護您的數據免受威脅。我們專業的團隊採用最新的技術，確保資料的完整性和機密性，讓您的企業能夠在安全的環境中運行，專注於業務的發展與創新。</p>
+<h3 id="資訊安全守護您的寶貴資產">資訊安全：守護您的寶貴資產</h3>
+<p>企業和個人都面臨著來自網路犯罪分子、惡意軟體和其他威脅的日益嚴重的風險。資訊安全旨在保護您的資訊資產免受未經授權的訪問、使用、披露、破壞、修改或銷毀。</p>
+<h4 id="我們的資訊安全服務可幫助您">我們的資訊安全服務可幫助您：</h4>
 <ol>
-<li>消除數據孤島： 將數據從不同的應用程序和系統中整合在一起，以獲得全面的業務洞察力。</li>
-<li>提高業務效率： 自動化數據交換和應用程序交互，以提高工作效率。</li>
-<li>降低成本： 減少對手動數據處理和整合的依賴，以降低成本。</li>
-<li>增強競爭力： 通過更快、更明智的決策來獲得競爭優勢。</li>
+<li>識別風險： 我們會幫助您識別您的資訊資產面臨的潛在風險。</li>
+<li>制定安全策略： 我們會與您合作制定全面的資訊安全策略，以降低風險。</li>
+<li>實施安全措施： 我們會協助您實施安全措施，例如防火牆、入侵檢測系統和加密等。</li>
+<li>提高員工意識： 我們會幫助您提高員工對資訊安全的意識，以降低人為錯誤的風險。</li>
+<li>應對事件： 我們會幫助您制定應對資訊安全事件的計劃，並在事件發生時提供支持。</li>
 </ol>
-<p>如果您正在尋找可靠的多方整合合作夥伴，請立即聯繫我們。我們將幫助您實現高效的數據共享和應用程序交互，從而推動您的業務發展。</p>
+<h4 id="我們的資訊安全服務可幫助您-1">我們的資訊安全服務可幫助您：</h4>
+<ol>
+<li>保護您的寶貴資訊資產： 防止數據洩露、金融損失和品牌聲譽受損。</li>
+<li>遵守法律法規： 滿足行業標準和政府法規的要求。</li>
+<li>增強業務信任： 向您的客戶和合作夥伴表明您致力於保護他們的資訊。</li>
+</ol>
+<p>如果您正在尋找可靠的資訊安全合作夥伴，請立即聯繫我們。我們將幫助您建立一個強大的資訊安全態勢，從而保護您的業務。</p>
 </div>
       </div>
     </div>
