--- a/services/7-e-commerce/index.html
+++ b/services/7-e-commerce/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>多方整合 - AI OP-專業的運維服務</title>
+  <title>電商品牌 - AI OP-專業的運維服務</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon.png">
@@ -104,12 +104,12 @@
   </div>
 </div>
     
-<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/services/service1.jpg')">
+<div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/services/ecommerce.png')">
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">services</span>
-      <h1>多方整合 </h1>
-      <p>分析應用系統所需的資源 達成用戶最佳體驗</p>
+      <h1>E-Commerce Brand</h1>
+      <p>打造專屬電商品牌 - 從零開始，成就不凡</p>
     </div>
   </div>
 </div>
@@ -118,25 +118,32 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <div class="content"><p>在當今充滿競爭的市場中，企業需要整合來自不同應用程序和系統的數據，以獲得全面的業務洞察力並做出明智的決策。
-然而，多方整合往往是一項複雜且具有挑戰性的任務，需要專業的知識和技能。</p>
-<h4 id="多方整合打破資訊孤島實現高效協作">多方整合：打破資訊孤島，實現高效協作</h4>
-<p>多方整合服務可幫助您克服這些挑戰，實現高效的數據共享和應用程序交互。我們擁有經驗豐富的團隊，可提供以下服務：</p>
-<ul>
-<li>需求分析： 我們會仔細分析您的業務需求，並確定所需的整合方案。</li>
-<li>架構設計： 我們會設計一個安全、可靠且可擴展的整合架構，以滿足您的業務需求。</li>
-<li>應用程序開發： 我們會開發定制的整合應用程序，以連接您的應用程序和系統。</li>
-<li>數據遷移： 我們會安全地將您的數據遷移到新的整合平台。</li>
-<li>測試和驗證： 我們會全面測試您的整合解決方案，以確保其正常運行。</li>
-</ul>
-<h4 id="我們的多方整合服務可幫助您">我們的多方整合服務可幫助您：</h4>
+        <div class="content"><p>在數字時代，擁有一個強大的電商品牌是成功的關鍵。AIOP 專業運維團隊為您提供全方位的電商品牌打造服務，無論您選擇當今流行的電商平台，還是個人化的 WordPress eCommerce，我們都能助您一臂之力。</p>
+<h2 id="特色服務">特色服務：</h2>
 <ol>
-<li>消除數據孤島： 將數據從不同的應用程序和系統中整合在一起，以獲得全面的業務洞察力。</li>
-<li>提高業務效率： 自動化數據交換和應用程序交互，以提高工作效率。</li>
-<li>降低成本： 減少對手動數據處理和整合的依賴，以降低成本。</li>
-<li>增強競爭力： 通過更快、更明智的決策來獲得競爭優勢。</li>
+<li>
+<p>多平台支持：我們熟悉各大主流電商平台，如 Shopify、WooCommerce、Magento 等，幫助您快速上線，佈局全球市場。</p>
+</li>
+<li>
+<p>個性化設計：通過 WordPress eCommerce，我們為您定制獨特的網店設計，彰顯品牌特色，提升用戶黏性。</p>
+</li>
+<li>
+<p>高效SEO優化：我們提供專業的SEO服務，提升您的網站在搜索引擎中的排名，增加自然流量，讓您的產品被更多人發現。</p>
+</li>
+<li>
+<p>卓越用戶體驗：從網站速度優化到移動端適配，我們確保每一位訪客都能享受到流暢、愉快的購物體驗。</p>
+</li>
+<li>
+<p>安全可靠：我們實施嚴格的安全措施，保護您的數據和交易信息，讓您的網店運行無憂。</p>
+</li>
+<li>
+<p>24/7 技術支持：我們提供全天候的技術支持服務，隨時解決您的任何問題，確保業務運營不間斷。</p>
+</li>
+<li>
+<p>整合行銷策略：我們幫助您制定並執行全面的行銷計劃，包括社交媒體營銷、內容營銷和電子郵件營銷，提升品牌知名度和銷售轉化率。</p>
+</li>
 </ol>
-<p>如果您正在尋找可靠的多方整合合作夥伴，請立即聯繫我們。我們將幫助您實現高效的數據共享和應用程序交互，從而推動您的業務發展。</p>
+<p>選擇 AIOP，您將獲得一個強大且有競爭力的電商品牌，從建立到運營，我們一路相伴，助您在激烈的市場競爭中脫穎而出。立即聯繫我們，開啟您的電商成功之旅！</p>
 </div>
       </div>
     </div>
