--- a/case/e-commerce-ip/index.html
+++ b/case/e-commerce-ip/index.html
@@ -118,16 +118,37 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="case case-single">
-        <div class="content"><p><em><strong>客戶</strong></em>： 台灣金融服務公司</p>
-<p><em><strong>挑戰</strong></em>： 公司面臨日益嚴峻的網路安全威脅，亟需建立全面的安全策略以保護敏感數據和系統。</p>
-<p><em><strong>解決方案</strong></em>： 我們的團隊對客戶的 IT 環境進行了深入的安全評估，並識別出潛在的漏洞。隨後，我們協助客戶實施了一系列安全措施，包括：</p>
-<p>多重身份驗證 (MFA)
-身份和訪問管理 (IAM)
-數據加密
-漏洞掃描和修補程序
-員工安全意識培訓
-定期安全審核
-通過我們的努力，客戶的網路安全防護能力顯著提升，有效避免了昂貴的數據洩露和網路攻擊事件。</p>
+        <div class="content"><p><strong>案例描述</strong>：
+一家台灣新興電商品牌希望在競爭激烈的市場中脫穎而出，並建立強大的品牌形象。
+他們需要快速構建一個吸引顧客的電商平台，並提升品牌知名度及市場份額。</p>
+<p><strong>挑戰</strong>：
+該品牌面臨的挑戰主要包括：建立一個功能全面且易於使用的電商平台，提升品牌在市場中的可見度，並有效管理線上營銷活動以吸引目標顧客。
+此外，還需要確保平台能夠支持多種支付方式和配送選項，並且具備良好的用戶體驗和性能。
+同時日賞的營運中也面臨這些挑戰：</p>
+<ol>
+<li>難以準確洞察消費者需求，導致產品開發和營銷活動效果不佳。</li>
+<li>無法提供個性化的購物體驗，降低了顧客滿意度和忠誠度。</li>
+<li>難以有效管理供應鏈，導致庫存積壓和缺貨等問題。</li>
+</ol>
+<p><strong>解決方案</strong>：
+我們首先幫助客戶選擇了流行的電商平台工具，包括 Shopify 和 WordPress eCommerce，並根據品牌需求進行了功能擴展和自定義設計。
+我們設計了一個現代化的用戶界面，確保平台具備簡便的購物流程和高效的產品管理系統。</p>
+<p>在品牌推廣方面，我們運用了 SEO 優化、社交媒體營銷和內容營銷等策略，提升了品牌的線上曝光率。我們還設計了促銷活動和忠誠度計劃，以吸引並留住顧客。</p>
+<p><strong>案例成果</strong>：
+經過三個月的合作，該電商品牌的電商平台成功上線，並迅速吸引了大量顧客。品牌的網站流量提升了150%，轉化率提高了35%。
+線上銷售額在首個季度達到預期目標的120%，顯著提升了市場份額和品牌知名度。用戶反饋表明，平台的用戶體驗良好，購物過程簡便且愉快。</p>
+<p><strong>具體措施建議</strong>：</p>
+<ol>
+<li>選擇合適平台：根據品牌需求選擇合適的電商平台工具，如 Shopify 或 WordPress eCommerce。</li>
+<li>自定義設計：設計符合品牌形象的用戶界面，確保購物流程的簡便和高效。</li>
+<li>SEO 優化：進行 SEO 優化，提升品牌在搜索引擎中的可見度。</li>
+<li>社交媒體營銷：運用社交媒體推廣品牌，增加品牌曝光率。</li>
+<li>內容營銷：創建有價值的內容來吸引和維護顧客。</li>
+<li>促銷和忠誠度計劃：設計促銷活動和忠誠度計劃以提升顧客留存率。</li>
+</ol>
+<p><strong>案例啟示</strong>：
+這次成功的電商品牌協助案例表明，通過量身定制的電商平台建設和全面的品牌推廣策略，可以有效提升品牌在市場中的競爭力。
+對於快速成長的電商品牌,及時進行數字化轉型至關重要。通過整合先進技術和優化運營流程,不僅能夠顯著提升運營效率,還能大幅改善客戶體驗,從而在激烈的市場競爭中脫穎而出。成功的電商運營需要在技術、流程和人才三方面同步發力,持續優化和創新。</p>
 </div>
       </div>
     </div>
