--- a/case/enhance-security/index.html
+++ b/case/enhance-security/index.html
@@ -118,16 +118,37 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="case case-single">
-        <div class="content"><p><em><strong>客戶</strong></em>： 台灣金融服務公司</p>
-<p><em><strong>挑戰</strong></em>： 公司面臨日益嚴峻的網路安全威脅，亟需建立全面的安全策略以保護敏感數據和系統。</p>
-<p><em><strong>解決方案</strong></em>： 我們的團隊對客戶的 IT 環境進行了深入的安全評估，並識別出潛在的漏洞。隨後，我們協助客戶實施了一系列安全措施，包括：</p>
-<p>多重身份驗證 (MFA)
-身份和訪問管理 (IAM)
-數據加密
-漏洞掃描和修補程序
-員工安全意識培訓
-定期安全審核
-通過我們的努力，客戶的網路安全防護能力顯著提升，有效避免了昂貴的數據洩露和網路攻擊事件。</p>
+        <div class="content"><p>確保了系統安全，保護敏感數據</p>
+<p><em><strong>案例描述</strong></em>：
+會計師公司面臨日益嚴峻的網絡威脅，特別是針對客戶敏感資料的攻擊。<br>
+該機構經常遭受攻擊嘗試，<code>雖無顯著損失</code>，但傳統的資安措施已無法應對，急需全面提升資安防護能力。</p>
+<p><em><strong>挑戰</strong></em>：
+公司面臨日益嚴峻的網路安全威脅，亟需建立全面的安全策略以保護敏感數據和系統。</p>
+<p><em><strong>解決方案</strong></em>：
+我們進行了深入的安全風險評估，識別出系統中的潛在漏洞和薄弱環節。我們實施了多層次的安全防護措施，包括部署先進的防火牆和入侵檢測系統，強化網絡邊界防禦。此外，我們還引入了零信任架構，確保內部網絡的每一次訪問都經過嚴格驗證。
+除此之外，針對客戶的 IT 環境進行了深入的安全評估，並識別出潛在的漏洞。隨後，我們協助客戶實施了一系列安全措施，包括：</p>
+<ol>
+<li>多重身份驗證 (MFA)</li>
+<li>身份和訪問管理 (IAM)</li>
+<li>數據加密</li>
+<li>漏洞掃描和修補程序</li>
+<li>員工安全意識培訓</li>
+<li>定期安全審核</li>
+</ol>
+<p><em><strong>案例成果</strong></em>：
+經過一年的實施和運行，該公司未發生一起重大安全事件，安全事件數量較前年減少了<code>80%</code>。
+客戶數據的完整性和保密性得到了極大保障，客戶信任度顯著提升。A</p>
+<p><em><strong>具體措施建議</strong></em>：</p>
+<ol>
+<li>多層次防護：部署先進的防火牆和入侵檢測系統，強化網絡邊界防禦。</li>
+<li>零信任架構：引入零信任架構，確保內部網絡的每一次訪問都經過嚴格驗證。</li>
+<li>數據加密：對敏感數據進行加密處理，防止未授權訪問。</li>
+<li>訪問控制：實施嚴格的訪問控制措施，確保只有授權人員能夠接觸核心信息。</li>
+<li>定期審計和測試：進行定期的安全審計和滲透測試，及時發現並修復系統漏洞。</li>
+<li>員工培訓：加強員工的安全意識培訓，防止社交工程攻擊。</li>
+</ol>
+<p><em><strong>案例啟示</strong></em>：
+資安防護是一項複雜的工程，需要金融機構從管理、技術和人員等方面採取綜合措施，才能有效提升資安防護能力，守護敏感數據安全。</p>
 </div>
       </div>
     </div>
