--- a/case/iterative-improvement/index.html
+++ b/case/iterative-improvement/index.html
@@ -118,10 +118,37 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="case case-single">
-        <div class="content"><p>客戶： 台灣軟體開發公司</p>
-<p>挑戰： 公司難以跟上快速發展的應用程序開發步伐，並在部署方面遇到頻繁的問題。他們亟需一種更有效、更可靠的方式來更新和迭代應用程序。</p>
-<p>解決方案： 我們的團隊向客戶介紹了 DevOps 實踐，並協助他們實施了持續集成和持續交付 (CI/CD) 管道。這自動化了構建、測試和部署應用程序的流程，使公司能夠更頻繁地發布新功能和更新，同時減少錯誤。</p>
-<p>採用 DevOps 實踐後，客戶成功將應用程序部署時間縮短了 50%，並提高了軟件發布的整體質量。</p>
+        <div class="content"><p>平滑地進行應用程式的更新</p>
+<p><em><strong>案例描述</strong></em>：
+一家領先的線上教育平台在快速發展過程中，面臨系統更新的重大挑戰。<br>
+該平台擁有超過<code>100萬</code>名活躍用戶，每日處理超過<code>50萬次</code>課程訪問。</p>
+<p><em><strong>挑戰</strong></em>：</p>
+<ol>
+<li>需要在不中斷服務的情況下進行系統更新</li>
+<li>新功能需要快速推出以應對市場競爭</li>
+<li>確保系統穩定性和用戶體驗不受影響</li>
+<li>管理大量的代碼變更和數據庫遷移</li>
+</ol>
+<p><em><strong>解決方案</strong></em>：
+制定了一套完善的更新迭代策略。我們首先對現有系統進行全面的分析，識別出關鍵模塊和潛在風險點。隨後，設計了基於持續集成（CI）和持續交付（CD）的自動化流程，確保每次代碼變更都能迅速且安全地部署到生產環境中。同時，我們引入了藍綠部署技術，使得新版本可以在無縫切換的情況下進行上線，極大降低了系統停機風險。</p>
+<p><em><strong>案例成果</strong></em>：</p>
+<ol>
+<li>系統更新時間從平均<code>4小時</code>縮短到<code>30分鐘</code></li>
+<li>新功能發布週期從2週縮短到2天</li>
+<li>系統穩定性提升<code>40%</code>，錯誤率降低<code>60%</code></li>
+<li>用戶滿意度提升<code>25%</code></li>
+</ol>
+<p><em><strong>具體措施建議</strong></em>：</p>
+<ol>
+<li>持續集成與持續交付（CI/CD）：實現代碼變更的快速、安全部署。</li>
+<li>藍綠部署：利用藍綠部署技術，降低系統停機風險。</li>
+<li>全面測試：在每次更新前進行功能測試、壓力測試和安全測試，確保系統穩定性。</li>
+<li>回滾策略：設置詳細的回滾計劃，以便在發生問題時迅速恢復到上一穩定版本。</li>
+<li>監控和告警：實施全面的系統監控和即時告警，及時發現並解決潛在問題。</li>
+</ol>
+<p><em><strong>案例啟示</strong></em>：
+本案例顯示，通過採用先進的系統更新策略，企業可以在保證服務穩定性的同時，顯著提高系統迭代速度和效率。這不僅提升了用戶體驗，也增強了企業的市場競爭力。持續的技術創新和流程優化是企業在數字時代保持領先地位的關鍵。</p>
+<p>這次成功的系統更新迭代案例表明，通過科學的運維策略和先進的技術手段，可以有效實現系統的快速迭代和穩定運行。對於企業來說，持續優化運維流程，確保每次更新的安全性和穩定性，是提升市場競爭力和用戶滿意度的關鍵。選擇 AIOP 作為您的運維合作夥伴，您將獲得無憂的技術保障和卓越的服務體驗。</p>
 </div>
       </div>
     </div>
