--- a/case/migration-to-cloud-buzz/index.html
+++ b/case/migration-to-cloud-buzz/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>雲端遷移 - AI OP-專業的運維服務</title>
+  <title>中小企業 - AI OP-專業的運維服務</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon.png">
@@ -108,7 +108,7 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section">case</span>
-      <h1>雲端遷移</h1>
+      <h1>中小企業雲端遷移</h1>
       <p>節省基礎設施成本，優化雲端遷移</p>
     </div>
   </div>
@@ -119,30 +119,41 @@
     <div class="col-12 col-md-8">
       <div class="case case-single">
         <div class="content"><p>實現高效的資源利用，節省硬體和維護成本</p>
-<p>案例分享：某台灣知名電子商務平台成功雲端遷移</p>
-<p><strong>案例描述</strong>：</p>
-<ol>
-<li>公司原有的本地基礎設施維護成本高昂，且難以擴展，亟需遷移至雲端以節省成本並提升敏捷性。</li>
-<li>面臨業務快速增長帶來的IT基礎設施壓力。在傳統數據中心模式下,他們難以應對訂單高峰期的突發流量,同時硬體維護成本不斷攀升。</li>
-</ol>
+<p>案例分享：某製造業企業的IT系統部署在傳統的本地數據中心，存在諸多問題尚未解決而影響産能及管理效率。</p>
+<p><strong>案例描述</strong>：
+基礎設施老化，維護成本高。
+系統擴展性差，難以滿足業務發展需求。
+系統可靠性差，經常出現故障，影響生產運營。</p>
 <p><em><strong>挑戰</strong></em>：
-該公司面臨的主要挑戰包括數據遷移過程中的數據完整性保障、雲端架構的設計與優化、業務系統的平滑過渡以及確保遷移過程中的業務連續性。此外，還需確保遷移後的雲端環境具有高安全性和高性能，以滿足日益增長的業務需求。</p>
-<p><strong>解決方案</strong>： 我們的團隊與客戶密切合作，評估其 IT 環境並制定雲端遷移策略。
-隨後，我們協助客戶將其基礎設施遷移至公共雲平台，例如 AWS 或 Azure。
-最終，客戶成功降低了 <code>30%</code> 的 IT 基礎設施成本，並在雲端遷移方面取得顯著節省。</p>
-<p>接手後，首先進行了全面的需求分析和現狀評估，制定了詳細的遷移計劃。考慮到客戶的業務需求和預算，我們選擇了 AWS 作為雲端服務提供商。我們的團隊精心設計了雲端架構，確保其具備高可用性和可擴展性。</p>
-<p>在遷移過程中，我們採用了分階段的遷移策略，確保每個步驟都在可控範圍內進行。我們首先遷移了非核心業務，進行充分測試後，再逐步將核心業務遷移至雲端。整個過程中，我們確保了數據的完整性和系統的安全性，避免了任何業務中斷。</p>
+如何將IT系統遷移到雲端，既要保障業務平穩運行，又要降低遷移成本和風險？</p>
+<ol>
+<li>確保業務連續性,避免長時間停機</li>
+<li>保護敏感的財務和客戶數據</li>
+<li>整合現有的遺留系統</li>
+<li>控制雲端遷移和後續運營成本</li>
+<li>培訓員工適應新的雲端環境</li>
+</ol>
+<p><strong>解決方案</strong>： AIOP 為該公司制定了一個詳細的雲端遷移計劃。
+首先，我們對現有系統進行全面的分析，識別關鍵應用和數據。
+在此基礎上，我們選擇了 AWS 作為雲端服務提供商，設計了一個高可用性和高擴展性的雲端架構。
+遷移過程分為多個階段，先從非核心業務開始，逐步將核心業務遷移至雲端。</p>
+<p>我們設計了分階段的<code>混合雲遷移策略</code>。首先將非關鍵應用遷移至公有雲,再逐步將核心系統遷移至私有雲。採用容器技術實現應用的可移植性,使用數據複製和同步工具確保數據完整性。實施嚴格的訪問控制和加密措施保護敏感數據。</p>
+<p>整個過程中，我們實施了嚴格的數據同步和安全措施，並進行了多次測試，確保系統的穩定運行。</p>
 <p><em><strong>案例成果</strong></em>：</p>
-<p>我們為該公司設計了全面的雲端遷移方案,採用混合雲架構,將80%的核心交易系統遷移至公有雲,同時保留20%的敏感數據在私有雲中。</p>
+<p>經過為期六個月的遷移工作，該公司成功將所有核心業務系統遷移至雲端。
+遷移完成後，系統運行成本降低了約<code>40%</code>，並實現了彈性擴展，能夠快速響應業務需求變化。
+系統的可用性達到<code>99.99%</code>，大幅提升了業務的穩定性和可靠性。
+用戶反饋顯示，系統性能顯著提高，數據訪問速度提升了<code>50%</code>。</p>
 <p><em><strong>具體措施建議</strong></em>：</p>
 <ol>
-<li>通過使用容器技術和自動擴展策略,我們幫助客戶實現了資源的彈性調配,使系統能夠在15分鐘內將處理能力提升3倍,輕鬆應對&quot;雙11&quot;等購物節的流量高峰。</li>
-<li>遷移完成後,該平台的系統性能提升了42%,高峰期響應時間從原本的2秒減少到0.8秒,降低了60%,顯著改善了用戶體驗。</li>
+<li>詳細規劃：制定詳細的遷移計劃，包括風險評估和應對措施。</li>
+<li>分階段實施：分階段遷移，確保每一步驟都在可控範圍內進行。</li>
+<li>數據同步：實施嚴格的數據同步機制，確保數據完整性和一致性。</li>
+<li>多次測試：在遷移過程中進行多次測試，包括功能測試、性能測試和安全測試。</li>
+<li>安全保障：加強雲端環境的安全性，採用加密和訪問控制等技術措施。</li>
 </ol>
-<p>同時,IT運營成本降低了37%,從每年2000萬新台幣降至1260萬新台幣,硬體投資減少65%,從原本的5000萬新台幣降至1750萬新台幣。</p>
 <p><em><strong>案例啟示</strong></em>：
-雲端環境的靈活性使得該公司能夠將新功能和服務的上線時間從平均4週縮短到1週,提高了市場競爭力。
-這個成功案例展示了精心規劃的雲端遷移如何為企業帶來顯著的效益,不僅優化了性能和成本,還為業務創新提供了強大支撐。</p>
+這次成功的雲端遷移案例表明，通過詳細的規劃和嚴格的執行，可以實現傳統系統向雲端的平滑過渡。遷移至雲端後，企業不僅可以大幅降低運營成本，還能提高系統的穩定性和性能，為業務的快速擴展提供強有力的支持。選擇 AIOP 作為您的雲端遷移合作夥伴，您將獲得專業的技術支持和卓越的服務體驗。</p>
 </div>
       </div>
     </div>
