--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <meta name="twitter:site" content="@zerostaticio" />
 <meta name="twitter:creator" content="@zerostaticio" />
 
-  <link rel="icon" href="/favicon.png">
+  <link rel="icon" href="https://aiop.one/favicon.png">
 
   
   
-  <link rel="stylesheet" href="/css/style.min.ece85fa747b500690d3e09e1ba35c033d70043bc0cfd5af490a5f867543af2db.css">
+  <link rel="stylesheet" href="/css/style.min.6e8745c67786182e4e492f681fe560baa679547a2f27de64902722f8c7fa60f3.css">
   
 
   
@@ -68,10 +68,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="/"><img height=29px width=217px alt="AI運維服務 穩如老狗" src="/images/logo_ai-op.png" /></a>
+      <a href="https://aiop.one/"><img height=29px width=217px alt="AI運維服務 穩如老狗" src="/images/logo_ai-op.png" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="/"><img height=36px width=36px alt="AI運維服務 穩如老狗" src="/images/logo_ai-op-s.png" /></a>
+      <a href="https://aiop.one/"><img height=36px width=36px alt="AI運維服務 穩如老狗" src="/images/logo_ai-op-s.png" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
@@ -265,7 +265,7 @@
     </div>
     
     <div class="col-12 text-center">
-      <a class="button button-primary" href="/services">» 服務說明 </a>
+      <a class="button button-primary" href="https://aiop.one/services">» 服務說明 </a>
 
     </div>
   </div>
@@ -307,8 +307,8 @@
           </ul>
           
           <ul class="footer-menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="https://aiop.one/">Home</a></li>
+            <li><a href="https://aiop.one/contact">Contact</a></li>
             <li class="copyright">© 2024 AI OP-專業的運維服務</li>
           </ul>
         </div>
