--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.6e8745c67786182e4e492f681fe560baa679547a2f27de64902722f8c7fa60f3.css">
+  <link rel="stylesheet" href="/css/style.min.e0882f8475694d6147ac013e96355fbf2574d0b675eb7be59e76a77af83734c5.css">
   
 
   
@@ -120,7 +120,7 @@
   <div class="container ">
     <div class="hero-text">
       <span class="hero-section"></span>
-      <h1>AIOP - 無憂運維，穩定如一</h1>
+      <h1>無憂運維，穩定如一</h1>
       <p>在快速變化的科技世界中，保持系統穩定運行是成功的關鍵。AIOP 是您的專業運維夥伴，擁有豐富的全球大型游戲部署和中國市場經驗。我們不僅能夠協助開發團隊迅速穩定地更新迭代產品，還能持續優化系統運行和提升用戶體驗。</p>
     </div>
     <div class="hero-down">
