--- a/services/4.cost-savings/index.html
+++ b/services/4.cost-savings/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.0543c0b83cc8d28fb823a2cfb7abe5c4d7c4c789fd8c13430e2aed3094617654.css">
+  <link rel="stylesheet" href="/css/style.min.8238be21c47575220b5a8aaf4d62242d2528cd14dfb317dcbc6158dd4c67611d.css">
   
 
   
@@ -140,7 +140,7 @@
     </div>
     <div class="col-12 col-md-4">
       
-<div>
+<div class="right-nav-menu">
 
 
     
